[package]
name = "zeekstdc"
version = "0.1.0"
description = "A very simple C wrapper for the zeekstd crate."
edition = "2024"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Absolucy/zeekstdc"
readme = "README.md"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[lints.clippy]
# presets
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
# individual lints
assigning_clones = "warn"
create_dir = "warn"
default_trait_access = "warn"
inefficient_to_string = "warn"
redundant_type_annotations = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_to_string = "warn"

[dependencies]
zeekstd = "0.6"

[profile.release]
lto = "thin"
debug = "limited"
